--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "mimidots/ezzy",
   "description": "full mimidots website",
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
   "license": "proprietary",
   "authors": [
     {
@@ -10,10 +10,10 @@
     }
   ],
   "require": {
-    "php": ">=5.6.4",
+    "php": ">7.1",
     "nesbot/carbon": "~1.20",
-	        "vlucas/phpdotenv": "~2.2",
-    "murage/sqlddl":"dev-master"
+    "murage/sqlddl":"dev-master",
+    "safaricom/mpesa": "dev-master"
   },
   "autoload": {
     "classmap":[
